<resources>
    <string name="app_name">News Aggregator</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="general_error">Oops… something went wrong</string>
    <string name="author">Author: %1$s</string>

    <string name="category_general">General</string>
    <string name="category_business">Business</string>
    <string name="category_entertainment">Entertainment</string>
    <string name="category_technology">Technology</string>
    <string name="category_science_and_nature">Science and nature</string>
    <string name="category_sports">Sports</string>
    <string name="category_about">About</string>
    <string name="category_music">Music</string>
    <string name="category_gaming">Gaming</string>
</resources>
